# qq-auto-like-plus

./: .gitignore  PROJECT_SUMMARY.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.bmad-method/implementation-artifacts/: 1-1-tauri-project-init.md  1-2-sqlite-database-and-config.md  1-3-napcat-download-and-extract.md  1-4-napcat-process-and-qr-login.md  2-1-onebot-api-client.md  2-2-quota-management.md  2-3-batch-like-executor.md  2-4-scheduled-task-scheduler.md  3-1-system-tray-icon-and-menu.md  3-2-panel-window-and-tray-interaction.md  3-3-napcat-health-check-and-restart.md  3-4-autostart-and-single-instance.md  sprint-status.yaml  (+11 more)
docs/: project-brief.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_quota_and_history.sql  003_friends.sql  004_scheduler_config.sql  005_webhook_config.sql  006_reply_config.sql  007_tags.sql  008_tag_strategy.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: engine.rs  friends.rs  like.rs  logs.rs  mod.rs  napcat.rs  settings.rs  stats.rs  webhook.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/engine/: like_executor.rs  mod.rs  quota.rs  reply_handler.rs  scheduler.rs
src-tauri/src/friends/: strategy.rs
src-tauri/src/napcat/: config.rs  downloader.rs  mod.rs  process.rs
src-tauri/src/onebot/: client.rs  mod.rs  types.rs
src-tauri/src/stats/: queries.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/webhook/: mod.rs
(+91 files in other folders)
